--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@
 
 buildscript {
     ext.kotlin_version = '1.3.21'
+    ext.supportVersion = '27.1.1'
+    ext.thirtyinchVersion = '0.9.0'
+    ext.retrofitVersion = '2.3.0'
+    ext.rxAndroidVersion = '2.1.0'
+    ext.daggerVersion = '2.13'
     repositories {
         google()
         jcenter()
